--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </script>
     <script type="module" src="/src/client.ts"></script>
     <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="/src/ui/SplitPane.css" />
   </head>
   <body>
     <noscript><h1>Sorry, but JavaScript must be <a href="https://www.wikihow.com/Enable-JavaScript">enabled</a> to play.</h1></noscript>
@@ -25,18 +26,25 @@
       <sup>*</sup>or whatever your browser calls it</sup>
     </dialog>
     <main>
-      <div class="canvasShrinkwrap">
-        <canvas id="canvas"></canvas>
-        <div class="display:flex justify-content:center">
-          <my-admin-tools z-show="isSignedIn" current-level-id="currentLevelId"></my-admin-tools>
-          <my-toolbar is-paused="isPaused" is-signed-in="isSignedIn"></my-toolbar>
+      <div class="split-container">
+        <div class="split-pane left-pane">
+          <div class="canvasShrinkwrap">
+            <canvas id="canvas"></canvas>
+            <div class="display:flex justify-content:center">
+              <my-admin-tools z-show="isSignedIn" current-level-id="currentLevelId"></my-admin-tools>
+              <my-toolbar is-paused="isPaused" is-signed-in="isSignedIn"></my-toolbar>
+            </div>
+            <my-vars-form z-show="devToolsVarsFormEnabled" class="bottom right absolute z-index:1"></my-vars-form>
+            <!-- TODO uncomment -->
+            <!-- <h1 z-hide-until-init class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% - 4em)"> -->
+            <!--   $currentInputFeedback -->
+            <!-- </h1> -->
+          </div>
         </div>
-        <div id="entity-inspector-root"></div>
-        <my-vars-form z-show="devToolsVarsFormEnabled" class="bottom right absolute z-index:1"></my-vars-form>
-        <!-- TODO uncomment -->
-        <!-- <h1 z-hide-until-init class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% - 4em)"> -->
-        <!--   $currentInputFeedback -->
-        <!-- </h1> -->
+        <div class="split-divider" id="split-divider"></div>
+        <div class="split-pane right-pane">
+          <div id="entity-inspector-root"></div>
+        </div>
       </div>
       <dialog id="modal" z-show="showModal">
         <my-main-menu z-route="`menu`" is-at-start="isAtStart"></my-main-menu>
