put scrollbars on table

--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
           </div>
         </div>
         <div class="split-divider" id="split-divider"></div>
-        <div class="split-pane right-pane">
-          <div id="entity-inspector-root"></div>
-        </div>
+        <div class="split-pane right-pane" id="entity-inspector-root"></div>
       </div>
       <dialog id="modal" z-show="showModal">
         <my-main-menu z-route="`menu`" is-at-start="isAtStart"></my-main-menu>
