--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <!-- </h1> -->
           </div>
         </div>
-        <div class="split-divider" id="split-divider"></div>
-        <div class="split-pane right-pane" id="entity-inspector-root"></div>
+        <div z-route="`editor`" class="split-divider" id="split-divider"></div>
+        <div z-route="`editor`" class="split-pane right-pane" id="entity-inspector-root"></div>
       </div>
       <dialog id="modal" z-show="showModal">
         <my-main-menu z-route="`menu`" is-at-start="isAtStart"></my-main-menu>
