--- a/public/my-main-menu.html
+++ b/public/my-main-menu.html
@@ -11,7 +11,7 @@
           style="height: 1.5em"
           inherit-size
         ></my-img>
-        <button class="<a>" z-click="handleRestart">start</button>
+        <a href="#game">start</a>
       </li>
       <li class="display:flex" style="height: 2em" z-hide="isAtStart">
         <my-img
