--- a/public/my-toolbar.html
+++ b/public/my-toolbar.html
@@ -17,9 +17,9 @@
       <button class="padding:0" z-click="handlePause" z-hide="isNotPlaying">
         <my-img id="`pause-icon.gif`"></my-img>
       </button>
-      <button class="padding:0" z-click="handlePressMenu">
+      <a class="<button> padding:0 margin:0" href="#menu">
         <my-img id="`menu-icon.gif`"></my-img>
-      </button>
+      </a>
       <button class="padding:0" z-click="handleZoomIn">
         <my-img id="`zoom-in-icon.gif`"></my-img>
       </button>
