dev tools toggle button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div z-route="`editor`" class="split-divider" id="split-divider"></div>
-        <div z-route="`editor`" class="split-pane right-pane" id="entity-inspector-root"></div>
+        <div z-route="`editor`" class="split-pane right-pane" id="dev-tools-root"></div>
       </div>
       <dialog id="modal" z-show="showModal">
         <my-main-menu z-route="`menu`" is-at-start="isAtStart"></my-main-menu>
