clean up split pane

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!-- </h1> -->
           </div>
         </div>
-        <div class="display:flex" id="dev-tools-root"></div>
+        <div id="dev-tools-marker"></div>
       </div>
       <dialog id="modal" z-show="showModal">
         <my-main-menu z-route="`menu`" is-at-start="isAtStart"></my-main-menu>
