--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="split-pane left-pane">
           <div class="canvasShrinkwrap">
             <canvas id="canvas"></canvas>
-            <div id="toolbar-marker"></div>
+            <div id="toolbar-placeholder"></div>
             <my-vars-form z-show="devToolsVarsFormEnabled" class="bottom right absolute z-index:1"></my-vars-form>
             <!-- TODO uncomment -->
             <!-- <h1 z-hide-until-init class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% - 4em)"> -->
@@ -38,7 +38,7 @@
             <!-- </h1> -->
           </div>
         </div>
-        <div id="dev-tools-marker"></div>
+        <div id="dev-tools-placeholder"></div>
       </div>
       <dialog id="modal" z-show="showModal">
         <my-main-menu z-route="`menu`" is-at-start="isAtStart"></my-main-menu>
