translate sign-in-form

--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
     </script>
     <div class="fixed top z-index:3 width:100%" id="flashesElement"></div>
     </dialog>
-    <my-sign-in-form></my-sign-in-form>
+    <div id="sign-in-form-placeholder"></div>
   </body>
 </html>
