translate menu to marko

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div id="dev-tools-placeholder"></div>
       </div>
       <dialog id="modal" z-show="showModal">
-        <my-main-menu z-route="`menu`" is-at-start="isAtStart"></my-main-menu>
+        <div id="main-menu-placeholder"></div>
         <my-help z-route="`help`"></my-help>
         <div z-show="loadingItems">
           <div class="RequestIndicator">
