--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <h1 class="RequestIndicator-message">loading<span id="loadingDescription"></span>&hellip;</h1>
         </div>
       </dialog>
-      <dialog id="mainMenuPlaceholder">
+      <dialog id="mainMenuModal">
         <div id="main-menu-placeholder"></div>
       </dialog>
       <script>
