revamp mobile touch controls

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <div class="canvasShrinkwrap">
             <canvas id="canvas"></canvas>
             <div id="toolbar-placeholder"></div>
+            <div id="touch-cursor-placeholder"></div>
           </div>
         </div>
         <div id="dev-tools-placeholder"></div>
