--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <canvas id="canvas"></canvas>
             <div id="toolbar-placeholder"></div>
             <div id="touch-cursor-placeholder"></div>
+            <div id="pause-overlay-placeholder"></div>
           </div>
         </div>
         <div id="dev-tools-placeholder"></div>
